# FitTracker2

./: .editorconfig  .env.local.template  .gitattributes  .gitguardian.yaml  .gitguardian.yml  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .npmrc  .ruff.toml  .slather.yml  .swiftlint.yml  .tool-versions  .vercelignore  CHANGELOG.md  CLAUDE.md  Figma.toml  LICENSE  Makefile  README.md  commitlint.config.js  figma.config.json  package-lock.json  package.json  project_framework_v7_1_integrity_cycle.md  project_gemini_audit_2026_04_21.md  pytest.ini  sd.config.android.mjs  sd.config.js  sd.config.mjs  setup.cfg
.cache/: gh-pr-cache.json
.claude/: settings.json  settings.local.json
.claude/_session-state/: default-branch.txt
.claude/cache/: _index.json
.claude/entrypoints/: framework-v7-10.md  framework-v7-8-3.md  framework-v7-8-4.md  framework-v7-8-6.md  framework-v7-8.md  framework-v7-9.md  project_framework_v7_1_integrity_cycle.md
.claude/integrity/: README.md  ga4-anomaly-checklist.md  observed-patterns.md  stale-state-sweep-history.json
.claude/logs/: 3d-interactive-framework-flow-diagram.log.json  README.md  adaptive-intelligence-next-pass.log.json  ai-golden-set-evals.log.json  ai-user-feedback-loop.log.json  an-1b1-csv-taxonomy-drift.log.json  an-1b2-ga4-mcp-disconnected.log.json  analytics-observability.log.json  android-token-pipeline.log.json  app-store-assets.log.json  audit-1-corrections.log.json  auth-polish-v2.log.json  case-study-comparison-table.log.json  case-study-presentation.log.json  case-study-thread-visualization.log.json  code-connect-automation.log.json  contract-fixture-consumer-adoption.log.json  cross-repo-state-sync-impl.log.json  data-integrity-framework-v7-6.log.json  de-r14-integrity-parallel.log.json  dev-env-r11-r13-r14-r17-r18-batch.log.json  exercise-search-filter.log.json  f-deployed-url-probe-ft2.log.json  f-launchd-drift-extension-sub-a.log.json  f-launchd-drift-extension.log.json  f-phase-e-adoption-freeze-discipline.log.json  f1-state-tasks-filesystem-drift.log.json  f11-reverse-sync-historical-exempt.log.json  f12-actionlint-gate.log.json  (+74 more)
.figma-cc-tools/: Package.resolved  Package.swift
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.vercel/: .env.production.local  project.json
Config/: Base.xcconfig  Debug.xcconfig  Release.xcconfig  Staging.xcconfig
FitTracker/: FitTracker.entitlements  FitTrackerApp.swift  Info.plist
FitTracker.xcodeproj/: project.pbxproj
FitTrackerTests/: AIAdapterTests.swift  AIAnalyticsTests.swift  AIOrchestratorReinforcementHelpersTests.swift  AIOrchestratorTests.swift  AIOrchestratorTrendUnsuppressTests.swift  AIRecommendationWithConfidenceTests.swift  AcceptanceTrendDetectorTests.swift  AccessibilityBasicsTests.swift  AccountDeletionServiceTests.swift  AnalyticsAdaptiveIntelligenceEventsTests.swift  AnalyticsEventNamingTests.swift  AnalyticsTests.swift  AnalyticsTrainingCustomProgramEventsTests.swift  AnalyticsTrainingExerciseEventsTests.swift  AppSettingsAndGoalProfileTests.swift  AuthManagerTests.swift  AuthPolishV2Tests.swift  BehavioralLearningStoreTests.swift  CloudKitSyncServiceTests.swift  CohortPriorCacheTests.swift  CohortPriorClientTests.swift  CustomProgramCodableTests.swift  CustomProgramMigrationTests.swift  DataExportServiceCSVTests.swift  DebouncerTests.swift  DebugSinkAdapterTests.swift  DeepLinkRouterReminderRegistryTests.swift  DeepLinkRouterTests.swift  EncryptionServiceTests.swift  ExerciseLibraryFilterTests.swift  FitTrackerCoreTests.swift  GarminAdapterTests.swift  HealthKitServiceTests.swift  HealthKitSourceProbeTests.swift  HomeAnalyticsTests.swift  HomeRecommendationProviderTests.swift  ImportEdgeCaseTests.swift  ImportPersistenceAndAnalyticsTests.swift  ImportTests.swift  KeychainHelperTests.swift  (+38 more)
FitTrackerUITests/: AppLaunchUITests.swift  AuthPolishV2UITests.swift  HomeReadinessUITests.swift  MealLogUITests.swift  OnboardingUITests.swift  SignInUITests.swift  UITestSupport.swift
FitTrackerWatch/: FitTrackerWatchApp.swift
ai-engine/: .env.example  Dockerfile  README.md  pyproject.toml
ai-engine/.github/workflows/: ci.yml
ai-engine/app/: config.py  main.py
ai-engine/app/auth/: jwt_validator.py
ai-engine/app/middleware/: rate_limiter.py
ai-engine/app/models/: common.py  nutrition.py  recovery.py  stats.py  training.py
ai-engine/app/routers/: nutrition.py  recovery.py  reminder_cohort.py  stats.py  training.py
ai-engine/app/services/: cohort_service.py  insight_service.py
ai-engine/tests/: conftest.py  test_golden_insights.py  test_health.py  test_nutrition.py  test_recovery.py  test_reminder_cohort.py  test_stats.py  test_training.py
ai-engine/tests/golden/: insight_cases.jsonl
android/: FitMeDesignTokens.kt
backend/: README.md
dashboard/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
design-tokens/: config-android.json  tokens.json
docs/: FRAMEWORK-FACTS.md  glossary-dev-basics.md
orchid/: README.md
scripts/: aggregate-dependency-audit.py  analytics-watch-server.py  analytics-watch.py  append-coverage-telemetry.py  append-feature-log.py  audit-cache-hit-rate.py  audit-script-imports.py  backfill-case-study-fields.py  backfill-platforms-tested.py  backfill-state-owner.py  backfill-timing-wall-time.py  build-item-registry.py  check-bot-pr-health.py  check-branch-drift.py  check-case-study-preflight.py  check-devssd-uuid.sh  check-memory-staleness.py  check-pr-workflow-coverage.py  check-prereg-lock.sh  check-ssd-health.sh  check-ssd-setup.sh  check-ssh-agent.sh  check-state-schema.py  check-tokens-android.js  check-tokens.js  check-vercel-project-link.sh  close-feature.py  compact-session-ledgers.py  count-framework-tokens.sh  create-isolated-worktree.py  create-signed-snapshot-pr.py  cross-layer-freshness.py  daily-integrity-checkpoint.py  data-freshness-audit.py  doctor.sh  documentation-debt-report.py  ensure-pr-cache-fresh.py  export-app-icon.sh  feature-completeness-audit.py  figma-mirror-staleness.py  (+81 more)
website/: README.md  package-lock.json  package.json
(+1657 files in other folders)
