[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fittracker-ai"
version = "0.1.0"
description = "FitTracker federated cohort intelligence engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx[asgi]>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# R9 (dev-env-master-plan-2026-05-24) — coverage instrumentation.
# Invoke locally:
#   pip install -e '.[dev]'         # installs pytest-cov
#   pytest --cov                    # uses [tool.coverage.*] config below
#   pytest --cov --cov-report=html  # full HTML report at ./htmlcov/
#   pytest --cov --cov-report=xml   # Cobertura XML (for Codecov / CI consumption)
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "app/main.py",
    "tests/*",
]

[tool.coverage.report]
# Fail-under stays unset for R9 ship; v8.0 GATE_TEST_MISSING meta-gate (T1
# in backlog) will set per-module thresholds once a 30-day baseline exists.
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
